--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -1,4 +1,4 @@
-# This workflow will run checks and validate the build
+# This workflow will run checks on a push or pull request to main
 
 name: GoBuild
 
@@ -21,10 +21,6 @@ jobs:
       with:
         go-version: '1.18'
 
-    - name: Lint & Vet
-      run: |
-       go vet .
-
-    - name: Validate Build
-      run: go build . 
+    - name: Vet
+      run: go vet .
   
